--- a/k8s/base/ingress.yaml
+++ b/k8s/base/ingress.yaml
@@ -1,4 +1,14 @@
-# ingress.yaml
+apiVersion: v1
+kind: Service
+metadata:
+  name: express-app
+  namespace: my-app-namespace
+spec:
+  ports:
+    - port: 3000
+  selector:
+    app: express-app
+---
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
