--- a/k8s/base/postgres.yaml
+++ b/k8s/base/postgres.yaml
@@ -15,6 +15,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: postgres
+  namespace: my-app-namespace
 spec:
   replicas: 1
   selector:
@@ -56,6 +57,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: postgres
+  namespace: my-app-namespace
 spec:
   ports:
     - port: 5432
